# FlightSimulator

./: CMakeLists.txt  CppProperties.json  README.md  main.cpp  skills-lock.json
.agents/skills/coder/: SKILL.md
